Resize map and correctly grow listview contents to stretch page

--- a/src/common/ui-components/Map/Map.module.scss
+++ b/src/common/ui-components/Map/Map.module.scss
@@ -7,9 +7,10 @@
 }
 
 .mapControls {
+  width: 29px;
   float: right;
   margin-right: unit(1);
-  margin-top: unit(1);
+  margin-top: 35%;
 
   .mapControlsDivider {
     margin: unit(1);
