--- a/src/domain/ContentPage/ContentPage.module.scss
+++ b/src/domain/ContentPage/ContentPage.module.scss
@@ -1,8 +1,13 @@
 @import '../../styles/spacings';
+@import '../../styles/z-index';
 
 .container {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
+}
+
+.content {
   flex-grow: 1;
 }
 
@@ -11,6 +16,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: unit(1);
+  z-index: z-index(content-subheading);
 }
 
 .categoryNavigation {
@@ -25,9 +31,18 @@
 
 .mapContainer {
   position: absolute;
+  top: 0;
   left: 0;
   height: 100%;
   width: 100%;
+}
+
+.mapContainerShrunk {
+  height: 40%;
+}
+.selectedFeatureMapView {
+  position: absolute;
+  top: 40%;
 }
 
 .spinner {
