--- a/src/styles/_z-index.scss
+++ b/src/styles/_z-index.scss
@@ -1,7 +1,8 @@
 $z-index: (
   video: -1,
   // slick-slider occupies z-index 1
-    menu: 5,
+    content-subheading: 4,
+  menu: 5,
 );
 
 @function z-index($key) {
