--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,11 @@
 @import 'colors';
 @import 'typography';
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   font-size: 16px;
   font-family: var(--hds-theme-primary-font), Arial;
